Fixed button height issue on small screens

--- a/src/index/index.css
+++ b/src/index/index.css
@@ -33,7 +33,6 @@ body {
   border-width: 0;
 }
 #body {
-  height: 33vh;
   text-align: center;
   display: flex;
   flex-direction: column;
